# rust-standard-library-cookbook

chapter-eight/: Cargo.toml
chapter-five/: Cargo.toml
chapter-five/chapter-five-derive/: Cargo.toml
chapter-five/chapter-five-derive/src/: lib.rs
chapter-four/: Cargo.toml
chapter-nine/: Cargo.toml
chapter-one/: Cargo.toml
chapter-seven/: Cargo.toml
chapter-six/: Cargo.toml
chapter-ten/: Cargo.toml
chapter-three/: Cargo.toml
chapter-two/: Cargo.toml
