[package]
authors = ["Jan Nils Ferner <jn_ferner@hotmail.de>"]
name = "chapter-nine"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.19"
hyper = { version = "0.14.16", features = ["full"] }
reqwest = "0.11.8"
serde = "1.0.133"
serde_derive = "1.0.133"
tokio = { version = "1", features = ["full"] }
