[package]
authors = ["Jan Nils Ferner <jn_ferner@hotmail.de>"]
name = "chapter-nine"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.19"
hyper = { version = "0.14.16", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.133"
serde_derive = "1.0.133"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
